--- a/restaurants/bougies-donuts---coffee.html
+++ b/restaurants/bougies-donuts---coffee.html
@@ -114,7 +114,14 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/Bougie-1.png" alt="Bougie's Donuts & Coffee - gluten-free restaurant in Austin" class="main-image">
+                        <div class="image-gallery">
+                            <img src="../images/restaurants/Bougie-1.png" alt="Bougie's Donuts & Coffee - gluten-free restaurant in Austin" class="main-image">
+                            <div class="thumbnail-gallery">
+                                <img src="../images/restaurants/Bougie-1.png" alt="Bougie's Donuts & Coffee" class="thumbnail active" onclick="changeMainImage(this)">
+                                <img src="../images/restaurants/Bougie-2.png" alt="Bougie's Donuts & Coffee" class="thumbnail" onclick="changeMainImage(this)">
+                                <img src="../images/restaurants/Bougie-3.png" alt="Bougie's Donuts & Coffee" class="thumbnail" onclick="changeMainImage(this)">
+                            </div>
+                        </div>
                     </div>
                     <div class="restaurant-info">
                         <h1>Bougie's Donuts & Coffee</h1>
@@ -213,6 +220,17 @@
             </div>
         </div>
     </footer>
+    
+    <script>
+    function changeMainImage(thumbnail) {
+        const mainImage = document.querySelector('.main-image');
+        mainImage.src = thumbnail.src;
+        
+        // Update active thumbnail
+        document.querySelectorAll('.thumbnail').forEach(t => t.classList.remove('active'));
+        thumbnail.classList.add('active');
+    }
+    </script>
 </body>
 </html>
 
