--- a/restaurants/nomade-cocina.html
+++ b/restaurants/nomade-cocina.html
@@ -115,7 +115,14 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/Nomade-1.png" alt="Nômadé Cocina - 100% gluten-free restaurant in Austin" class="main-image">
+                        <div class="image-gallery">
+                            <img src="../images/restaurants/Nomade-1.png" alt="Nômadé Cocina - 100% gluten-free restaurant in Austin" class="main-image">
+                            <div class="thumbnail-gallery">
+                                <img src="../images/restaurants/Nomade-1.png" alt="Nômadé Cocina" class="thumbnail active" onclick="changeMainImage(this)">
+                                <img src="../images/restaurants/Nomade-2.png" alt="Nômadé Cocina" class="thumbnail" onclick="changeMainImage(this)">
+                                <img src="../images/restaurants/Nomade-3.png" alt="Nômadé Cocina" class="thumbnail" onclick="changeMainImage(this)">
+                            </div>
+                        </div>
                     </div>
                     <div class="restaurant-info">
                         <h1>Nômadé Cocina</h1>
@@ -233,6 +240,17 @@
             </div>
         </div>
     </footer>
+    
+    <script>
+    function changeMainImage(thumbnail) {
+        const mainImage = document.querySelector('.main-image');
+        mainImage.src = thumbnail.src;
+        
+        // Update active thumbnail
+        document.querySelectorAll('.thumbnail').forEach(t => t.classList.remove('active'));
+        thumbnail.classList.add('active');
+    }
+    </script>
 </body>
 </html>
 
